Moving sources to Layout and Sample

--- a/GridLayout/Podfile
+++ b/GridLayout/Podfile
@@ -4,7 +4,7 @@ use_frameworks!
 inhibit_all_warnings!
 
 target 'FrenzyApps.Layout.SampleTests' do
-    project 'FrenzyApps.Layout.Sample/FrenzyApps.Layout.Sample.xcodeproj'
+    project 'Sample/Sample.xcodeproj'
   
     pod 'KIF'
   end
